fix: add overflow-x to hide horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
   padding: 1rem;
   margin: 16rem 0;
   background-color: #181818;
+  overflow-x: hidden;
 }
 
 .intro,
